# ContralCenter

./: Product Specifications.md  README.md  package-lock.json  package.json  tailwind.config.js  tailwind.config.js.bak
ipad-remote/: index.html  package-lock.json  package.json
ipad-remote/src/: App.tsx
src/: App.tsx  index.css  store.ts
src-tauri/: Cargo.toml  build.rs  check_error.txt  check_out.txt  check_out_2.txt  check_output.txt  check_output_2.txt  tauri.conf.json
src-tauri/src/: bridge.rs  driver.rs  hardware.rs  iot.rs  lib.rs  main.rs  rgb.rs
src/components/: Button.tsx  Card.tsx  DriverCard.tsx  DriverHub.tsx  EnvironmentFooter.tsx  HostNode.tsx  IoTMonitor.tsx  Layout.tsx  PeripheralNode.tsx  PulseEdge.tsx  QRCodeDisplay.tsx  RGBPanel.tsx  SafetyModal.tsx  Sidebar.tsx  TopologyMap.tsx
src/components/Sidebar/: LeftNav.tsx  RightPanel.tsx
src/components/Topology/: TopologyMap.tsx
src/components/UI/: GlassCard.tsx  HUDCapsule.tsx
src/hooks/: useHardware.ts
